--- a/src/app/components/admin/header-footer/header-footer.component.html
+++ b/src/app/components/admin/header-footer/header-footer.component.html
@@ -1,193 +1,16 @@
 <h2>Header/Footer constructor</h2>
-<div class="constructor" ngMoveDraggabaleElement (contextmenu)="newContextMenu()" ngMoveDraggabaleElement>
+<div class="constructorMain">
     <div class="clone-container" id="clone-container"></div>
-    <header class="element access-point" ngDropzone>
-        <p class="placeholder">header</p>
-    </header>
-    <!-- <iframe src="https://uiverse.io/" frameborder="0"></iframe> -->
-    <footer class="element access-point" ngDropzone>
-        <p class="placeholder">footer</p>
-    </footer>
+    <header class="element header" dropzone="true" placeholder="header"></header>
+    <footer class="element header" dropzone="true" placeholder="footer"></footer>
 </div>
-<div class="editor">
-    <div class="bg-dark"></div>
-    <div class="form-editor">
-        <h3></h3>
-        <form class="options-editor">
-            <select name="options-editor1" id="options-editor1">
-                <option value="--" selected>none</option>
-                <option value="background-color" type="color" add="true">background color</option>
-                <option value="color" type="color" add="true">text color</option>
-                <option value="flex-grow" type="number" add="false">grow</option>
-                <option value="border" type="textarea">border</option>
-                <option value="border-radius" type="number" add="true">border radius</option>
-                <option value="box-shadow" type="textarea">box shadow</option>
-                <option value="class" type="textarea">class name</option>
-                <option value="id" type="text">id name</option>
-            </select>
-            <select name="options-editor2" id="options-editor2">
-                <option value="--" selected >none</option>
-                <option value="margin-left" type="number" add="true">margin left</option>
-                <option value="margin-right" type="number" add="true">margin right</option>
-                <option value="margin-top" type="number" add="true">margin top</option>
-                <option value="margin-bottom" type="number" add="true">margin bottom</option>
-                <option value="padding-left" type="number" add="true">padding left</option>
-                <option value="padding-right" type="number" add="true">padding right</option>
-                <option value="padding-top" type="number" add="true">padding top</option>
-                <option value="padding-bottom" type="number" add="true">padding bottom</option>
-            </select>
-        </form>
-        <form class="options">
-            <h4>element options</h4>
-            <div class="row">
-                <div class="options-container">
-    
-                </div>
-                <div class="col end">
-                    <p id="resultCSS">Updated</p>
-                    <button>update</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-<div class="configurator">
-    <div class="bg-dark"></div>
-    <div class="form-editor">
-        <h3></h3>
-        <form  class="configs" [formGroup]="configs">
-            <div class="row">
-                <div class="confs-container">
-                    <div class="type-img">
-                        <p (click)="showGallery()" class="btn">select from uploadet</p>
-                        <p (click)="triggerInput()" class="btn">Upload image</p>
-                        <input #inputUpload type="file" name="uploadImg" (change)="saveImage($event)" (click)="hideGallery()" accept="image/png, image/jpg, image/jpeg, image/avif, image/svg+xml, image/webp, image/gif">
-                        <input type="text" placeholder="Paste the external image URL" (input)="setExImg($event)">
-                    </div>
-                    <div class="type-list">
-                        <input type="number" name="count-point" id="count-point" placeholder="Select the number of list items">
-                    </div>
-                    <div class="type-title">
-                        <p>Select title type: </p>
-                        <select name="tag-type" id="tag-type">
-                            <option value="h1">h1</option>
-                            <option value="h2">h2</option>
-                            <option value="h3">h3</option>
-                            <option value="h4">h4</option>
-                            <option value="h5">h5</option>
-                            <option value="h6">h6</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col end">
-                    <input type="text" name="src-to-change" id="src-to-change" formControlName="srctToChange" >
-                    <p id="resultConf">Updated</p>
-                    <button>update</button>
-                </div>
-            </div>
-        </form>
-    </div>
-    <app-uploaded-gallery (newItemEvent)="selectImg($event)"></app-uploaded-gallery>
-</div>
-<div class="components">
-    <div class="btn-elements">
-        <img src="assets/imgs/constructor/menu.svg" alt="" (click)="toggleElementsMenu()">
+
+<div class="constructorAside">
+    <div class="showHideBtnElement">
+        <img src="assets/imgs/constructor/menu.svg" alt="" >
     </div>
     
-    <div class="elements" [ngStyle]="{'right': !rightAside? '-20vw': '0vw'}">
-        <app-constructor-element *ngFor="let item of elements" [element]="item"></app-constructor-element>
-        <!-- <div class="element area prime" ngStartDraggable (onStartDrag)="clickableElements()">
-            <div class="border border1"></div>
-            <div class="border border2"></div>
-            <div class="border border3"></div>
-            <div class="border border4"></div>
-            <div class="funcBtn">
-                <img src="assets/imgs/constructor/move.png" alt="" class="move">
-                <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
-                <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
-            </div>
-            <p class="placeholder">area</p>
-        </div>
-        <div class="element img prime" ngStartDraggable (onStartDrag)="clickableElements()">
-            <div class="border border1"></div>
-            <div class="border border2"></div>
-            <div class="border border3"></div>
-            <div class="border border4"></div>
-            <div class="funcBtn">
-                <img src="assets/imgs/constructor/move.png" alt="" class="move">
-                <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration">
-                <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
-                <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
-            </div>
-            <p class="placeholder">image</p>
-            <img src="" alt="" class="editible-configurator">
-        </div>
-        <ul class="element list prime" ngStartDraggable (onStartDrag)="clickableElements()">
-            <div class="border border1"></div>
-            <div class="border border2"></div>
-            <div class="border border3"></div>
-            <div class="border border4"></div>
-            <div class="funcBtn">
-                <img src="assets/imgs/constructor/move.png" alt="" class="move">
-                <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration">
-                <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
-                <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
-            </div>
-            <p class="placeholder">list</p>
-            
-        </ul>
-        <div class="element title prime" ngStartDraggable (onStartDrag)="clickableElements()">
-            <div class="border border1"></div>
-            <div class="border border2"></div>
-            <div class="border border3"></div>
-            <div class="border border4"></div>
-            <div class="funcBtn">
-                <img src="assets/imgs/constructor/move.png" alt="" class="move">
-                <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration">
-                <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
-                <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
-            </div>
-            <p class="placeholder">title</p>
-            <h1 class="editible-configurator" contenteditable="true"></h1>
-        </div>
-        <div class="element paragraph prime" ngStartDraggable (onStartDrag)="clickableElements()">
-            <div class="border border1"></div>
-            <div class="border border2"></div>
-            <div class="border border3"></div>
-            <div class="border border4"></div>
-            <div class="funcBtn">
-                <img src="assets/imgs/constructor/move.png" alt="" class="move">
-                <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
-                <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
-            </div>
-            <p class="placeholder">text</p>
-            <p class="text editible-configurator" contenteditable="true"></p>
-        </div>
-        <a class="element button prime" href="" ngStartDraggable (onStartDrag)="clickableElements()">
-            <div class="border border1"></div>
-            <div class="border border2"></div>
-            <div class="border border3"></div>
-            <div class="border border4"></div>
-            <div class="funcBtn">
-                <img src="assets/imgs/constructor/move.png" alt="" class="move">
-                <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration">
-                <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
-                <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
-            </div>
-            <p class="placeholder">button</p>
-        </a>
-        <a class="element social-btn prime" href="" target="_blank" ngStartDraggable (onStartDrag)="clickableElements()">
-            <div class="border border1"></div>
-            <div class="border border2"></div>
-            <div class="border border3"></div>
-            <div class="border border4"></div>
-            <div class="funcBtn">
-                <img src="assets/imgs/constructor/move.png" alt="" class="move">
-                <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration">
-                <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
-                <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
-            </div>
-            <p class="placeholder">social button</p>
-        </a> -->
+    <div class="elements">
+        <app-constructor-element *ngFor="let elementConf of constructorElements" [element]="elementConf"></app-constructor-element>
     </div>
 </div>
