--- a/src/app/components/admin/header-footer/header-footer.component.scss
+++ b/src/app/components/admin/header-footer/header-footer.component.scss
@@ -22,3 +22,6 @@ h2{
     letter-spacing: 3px;
     font-size: calc($size-index * 2.2);
 }
+.element{
+    box-shadow: inset 0px 0px 10px $color;
+}
