--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,465 +7,166 @@ body {
 }
 * {
     font-family: "Inter", sans-serif;
+    transition-property: left, right, background-color;
+    transition-duration: 0.5s;
+    box-sizing: border-box;
 }
-
-.placeholder {
-    position: absolute;
-    top: 50%;
-    left: 0%;
-    width: 100%;
-    text-align: center;
-    transform: translate(0%, -50%);
-    margin: 0px;
-    color: $color;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 2em;
-    text-shadow: 0px 0px 1px black;
-    z-index: 0;
-}
-.non-empty {
-    border: none;
-    .palceholder {
-        display: none;
+@keyframes visible {
+    from {
+      opacity: 0;
     }
-}
-.clone-container {
+    to {
+      opacity: 1;
+    }
+   }
+.clone-container{
     position: absolute;
-    top: 0px;
     left: 0px;
-    width: 100%;
-    height: 100%;
-    .element {
-        width: 20%;
-        height: 10%;
-        z-index: 2;
+    top: 0px;
+    pointer-events: none;
+    .element{
+        width: 15vw;
+        height: 10vh;
         pointer-events: none;
+        transition-duration: 0s !important;
+        transform: translate(-50%, -50%);
     }
 }
-.editor .form-editor{
-    width: 75%;
-}
-.configurator .form-editor{
-    width: 50%;
-}
-.editor, .configurator {
-    position: absolute;
+.constructorMain{
+    position: relative;
     width: 100%;
-    left: 0%;
-    height: 100%;
-    top: 0%;
-    z-index: 3;
-    display: none;
-    .bg-dark {
-        position: absolute;
-        top: 0px;
-        left: 0px;
+    min-height: 90%;
+    &>*{
         width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.4);
-        z-index: -1;
-        cursor: pointer;
     }
-    .form-editor {
-        height: 70%;
-        max-height: 70%;
-        margin: auto;
-        margin-top: 5%;
-        background-color: white;
-        border: 10px solid rgba(77, 33, 121, 0.6);
-        border-radius: 20px;
-        padding: 20px;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        h3 {
-            margin: 0px;
-            font-size: calc($size-index * 1.5);
-            text-transform: capitalize;
-        }
-        .options-editor {
-            height: 10%;
-            display: flex;
-            accent-color: $color;
-            select {
-                border: none;
-                border-bottom: 4px solid rgba(77, 33, 121, 0.6);
-                outline: none;
-                padding: 0px;
-                margin: 0px 5px;
-                width: 50%;
-                text-align: center;
-                text-transform: capitalize;
-                font-size: calc($size-index * 0.85);
-                cursor: pointer;
-                transition-duration: 0.5s;
-                &:hover {
-                    border-bottom: 4px solid rgba(149, 48, 250, 0.718);
-                }
-            }
-        }
-
-        .options, .configs {
-            width: 100%;
-            height: 70%;
-            display: flex;
-            justify-content: space-between;
-            flex-grow: 1;
-            flex-direction: column;
-            margin-top: 20px;
-
-            h4 {
-                width: 100%;
-                margin: 0px;
-                height: 9%;
-                margin-bottom: 1%;
-                font-size: calc($size-index * 1.2);
-                text-transform: capitalize;
-            }
-        }
-        .row {
-            width: 100%;
-            height: 90%;
-            flex-grow: 1;
-            display: flex;
-            justify-content: space-between;
-            align-items: end;
-            .options-container, .confs-container {
-                width: 85%;
-                height: 100%;
-                max-height: 100%;
-                overflow-y: scroll;
-                &::-webkit-scrollbar {
-                    display: none;
-                }
-                &>p{
-                    cursor: pointer;
-                }
-                &>div{
-                    display: flex;
-                    width: 100%;
-                    flex-wrap: wrap;
-                    align-items: center;
-                    &>*{
-                        margin: 10px 0px;
-                    }
-                    .btn{
-                        padding: 10px 20px;
-                        border: 4px solid rgba(77, 33, 121, 0.6);
-                        border-radius: 10px;
-                        cursor: pointer;
-                    }
-                    p{
-                        font-size: calc((1vw + 1vh) * 0.85);
-                        margin: 0px;
-                        text-transform: capitalize;
-                    }
-                    input[type="file"]{
-                        display: none;
-                    }
-                    input:not([type="file"]){
-                        flex-grow: 1;
-                        resize: vertical;
-                        height: 5vh;
-                        width: 100%;
-                        border: none;
-                        border-bottom: 4px solid rgba(77, 33, 121, 0.6);
-                        outline: none;
-                        padding: 0px;
-                        margin: 0px 5px;
-                        font-size: calc((1vw + 1vh) * 0.85);
-                        align-self: self-end;
-                    }
-                }
-            }
-            .col {
-                position: sticky;
-                bottom: 0px;
-                right: 0px;
-                width: 15%;
-                display: flex;
-                flex-direction: column;
-                justify-content: end;
-                input{
-                    display: none;
-                }
-                p {
-                    color: darkgreen;
-                    font-size: calc($size-index * 1.1);
-                    text-align: center;
-                    display: none;
-                    margin: 0px;
-                }
-                button {
-                    width: 100%;
-                    font-size: calc($size-index * 0.5);
-                    background-color: whitesmoke;
-                    border: 5px solid rgba(72, 18, 125, 0.6);
-                    border-radius: 10px;
-                    cursor: pointer;
-                    text-transform: uppercase;
-                    padding: 10px 20px;
-                }
-            }
+    header, footer{
+        min-height: 20vh;
+        padding: 15px;
+        .element{
+            min-height: 15vh;
+            padding: 15px;
+            box-sizing: border-box;
         }
     }
 }
-.constructor {
-    width: 100%;
-    height: 100%;
-    overflow: scroll;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 10px;
-    header,
-    footer,
-    main{
-        width: 100%;
-        min-height: 15vh;
-        height: auto;
-        position: relative;
-        box-shadow: inset 0px 0px 10px $color;
-        box-sizing: border-box;
-        display: flex;
-        flex-wrap: wrap;
-        .element {
-            margin: 15px;
-            width: calc(100% - 30px);
-        }
-    }
-}
-.constructor {
-    header .modified,
-    footer .modified {
-        box-shadow: none;
-        margin: 5px;
-    }
-}
-.constructor::-webkit-scrollbar {
-    display: none;
-}
-.components {
+.constructorAside{
     position: absolute;
     top: 0px;
     right: 0px;
-    width: 0;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 20vw;
+    height: calc(100vh - $size-index * 4.5);
     pointer-events: none;
-    background: transparent;
     z-index: 2;
-    .btn-elements {
-        height: 7%;
-        z-index: 2;
-        position: relative;
+    .showHideBtnElement{
         display: flex;
+        align-items: center;
         justify-content: end;
-        pointer-events: all;
-        img {
-            height: 100%;
-            margin-right: 7px;
+        height: 10vh;
+        padding-right: 10px;
+        z-index: 1;
+        img{
+            height: 70%;
             cursor: pointer;
+            pointer-events: all;
         }
     }
     .elements{
         position: absolute;
-        transition-duration: 0.2s;
+        right: 0px;
         top: 0px;
-        right: -0%;
-        background-color: rgb(31, 31, 31);
+        width: 100%;
         height: 100%;
-        width: 20vw;
+        overflow: scroll;
+        padding: 10px;
+        padding-top: 8vh;
         box-sizing: border-box;
-        border: 3px solid $color;
-        pointer-events: none;
-        .element {
-            cursor: pointer;
-            pointer-events: auto;
-            width: 100%;
-            &:first-child {
-                margin-top: 20%;
-            }
-            &>*:last-child:not(.placeholder){
-                display: none;
-            }
-        }
-        
-    }
-}
-.prime {
-    min-height: 10% !important;
-}
-.hide-placeholder > .placeholder {
-    display: none;
-}
-.element {
-    position: relative;
-    min-height: 5vh;
-    box-sizing: border-box;
-    display: flex;
-    flex-wrap: wrap;
-    overflow: visible;
-    margin: 0px;
-    .placeholder {
-        font-size: 1.3em;
-    }
-    &>*:not(.placeholder, .border, .funcBtn){
-        z-index: 2;
-    }
-    &>*:last-child:not(.placeholder, img, li, .section, .area, .element){
-        width: 100%;
-        margin: 0px;
-    }
-}
-.section {
-    width: 100%;
-}
-.area, .list {
-    flex-grow: 2;
-    min-width: 35%;
-}
-.list{
-    list-style: none;
-    padding: 0px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: stretch;
-    margin:0px;
-    &>li{
-        border: 5px dashed $color;
-        min-width: 3vw;
-        min-height: 3vw;
-        flex-grow: 2;
-        cursor: pointer;
-    }
-}
-.img{
-    &>img{
-        width: 100%;
-    }
-}
-.img,
-.button,
-.title,
-.text,
-.paragraph {
-    width: 100%;
-}
-.funcBtn {
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    display: none;
-    overflow: hidden;
-    z-index: 5;
-    img {
-        height: calc($size-index * 1.5);
-        cursor: pointer;
-    }
-}
-.border1:hover,
-.border2:hover,
-.border3:hover,
-.border4:hover {
-    background-color: rgba(96, 128, 245, 0.631);
-    cursor: pointer;
-}
-.border1 {
-    position: absolute;
-    width: 100%;
-    height: 0px;
-    border-radius: 10px;
-    background-color: rgba(89, 82, 228, 0.621);
-    top: -5px;
-    left: 0px;
-    transition-duration: 0.2s;
-}
-.border2 {
-    position: absolute;
-    width: 100%;
-    height: 0px;
-    border-radius: 10px;
-    background-color: rgba(89, 82, 228, 0.621);
-    bottom: -5px;
-    left: 0px;
-    transition-duration: 0.2s;
-}
-.border3 {
-    position: absolute;
-    width: 0%;
-    height: 100%;
-    border-radius: 10px;
-    background-color: rgba(89, 82, 228, 0.621);
-    top: 0px;
-    left: -5px;
-    transition-duration: 0.2s;
-}
-.border4 {
-    position: absolute;
-    width: 0%;
-    height: 100%;
-    border-radius: 10px;
-    background-color: rgba(89, 82, 228, 0.621);
-    top: 0px;
-    right: -5px;
-    transition-duration: 0.2s;
-}
-
-.option {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    margin: 10px 0px;
-    p {
-        margin: 0px;
-        width: 20%;
-        text-align: end;
-        margin-right: 10px;
-        font-size: calc((1vw + 1vh) * 0.85);
-        text-transform: capitalize;
-    }
-    input,
-    textarea,
-    select {
-        flex-grow: 1;
-        resize: vertical;
-        height: 5vh;
-        border: none;
-        border-bottom: 4px solid rgba(77, 33, 121, 0.6);
-        outline: none;
-        padding: 0px;
-        margin: 0px 5px;
-        font-size: calc((1vw + 1vh) * 0.85);
-        align-self: self-end;
-    }
-    input[type="color"] {
-        border: none !important;
-        padding: 0px;
-        flex-grow: 10;
-        cursor: pointer;
-    }
-    textarea {
-        border: 2px solid rgba(77, 33, 121, 0.6);
-        padding: 5px;
-        min-height: 6.5vh;
-        box-sizing: border-box;
-        &::-webkit-scrollbar {
+        background-color: rgb(27, 27, 27);
+        border: 6px solid $color;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        &::-webkit-scrollbar{
             display: none;
         }
+        .element{
+            width: 100%;
+            height: 10vh;
+            margin: 10px 0px;
+            cursor: pointer;
+            pointer-events: all;
+        }
     }
-    select {
+}
+section, .title, .paragraph, image{
+    width: 100%;
+}
+.element{
+    position: relative;
+    &::before{
+        content: attr(placeholder);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
         text-align: center;
+        text-transform: uppercase;
+        font-size: 1.3em;
+        font-weight: 700;
+        transform: translate(-50%, -50%)
     }
-    img{
-        height: calc($size-index * 2);
-        cursor: pointer;
+    &>.borders, &>.funcBtns, .leaved>.borders, .leaved>.funcBtns{
+        transition-property: opacity;
+        opacity: 0;
+        pointer-events: none;
     }
-}
-.horizontal{
-    flex-direction: row;
-}
-.vertical{
-    flex-direction: column;
+    .active:hover:not(.prime){
+        &>.borders, &>.funcBtns{
+            opacity: 1;
+            pointer-events: all;
+        }
+    }
+    .funcBtns{
+        width: 100%;
+        height: 5vh;
+        position: absolute;
+        img{
+            height: 100%;
+        }
+    }
+    .borders{
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        .border1, .border2, .border3, .border4{
+            position: absolute;
+            background-color: rgba(144, 0, 255, 0.6);
+            cursor: pointer;
+            box-shadow: 0px 0px 0px rgba(154, 29, 250, 0.6);
+            transition-duration: 0.5s;
+            &:hover{
+                background-color: rgba(154, 29, 250, 0.6);
+                box-shadow: 0px 0px 5px rgba(154, 29, 250, 0.6);
+                z-index: 1;
+            }
+        }
+        .border1, .border2{
+            width: 100%;
+            height: 12px;
+            border-radius: 10px;
+        }
+        .border3, .border4{
+            width: 12px;
+            height: 100%;
+            border-radius: 10px;
+        }
+        .border2{
+            bottom: 0px;
+        }
+        .border4{
+            right: 0px;
+        }
+    }
 }
