--- a/src/app/components/admin/home/home.component.scss
+++ b/src/app/components/admin/home/home.component.scss
@@ -25,7 +25,7 @@ $padding: 35px;
     }
     h2 {
         text-transform: uppercase;
-        font-family: "Koulen", sans-serif;
+        font-family: "Asap", sans-serif;
         font-size: calc($size-index * 3.7);
         letter-spacing: 5px;
         margin: 0px;
