--- a/src/app/components/admin/uploaded-gallery/uploaded-gallery.component.html
+++ b/src/app/components/admin/uploaded-gallery/uploaded-gallery.component.html
@@ -1,4 +1,7 @@
-<aside class="uploadedGallery" [ngStyle]="{ 'right': right }" (scroll)="onScroll($event)">
-    <button (click)="startLoop(0, true)">Start Loop</button>
-    <app-gallery-item *ngFor="let item of items" [src]="item" (toggleAsideEvent)="toggleAside(undefined, $event)"></app-gallery-item>
+<aside class="uploadedGallery">
+    <button (click)="toggleAside(true)" id="toggleGallery">hide menu</button>
+    <div #imagesDiv class="images"[ngStyle]="{ 'right': flipped? '-20vw': '0px' }" (scroll)="onScroll($event)">
+        <div *ngIf="images.length == 0" class="empty" placeholder="you don't have images"></div>
+        <app-gallery-item *ngFor="let src of images" [src]="src" (toggleAsideEvent)="setImage($event)" (toggleAsideEvent)="toggleAside(true)"></app-gallery-item>
+    </div>
 </aside>
