--- a/src/app/components/admin/admin/admin.component.scss
+++ b/src/app/components/admin/admin/admin.component.scss
@@ -8,7 +8,7 @@ $size-index: calc(1vw + 1vh);
     margin: 0px;
     padding: 0px;
     background: rgb(38, 38, 38);
-    background: linear-gradient(135deg, rgba(38, 38, 38, 1) 32%, rgba(99, 99, 99, 1) 73%, rgba(184, 184, 184, 1) 95%);
+    background: rgb(41, 41, 41);
     overflow: hidden;
 }
 
