--- a/src/app/components/admin/constructor-element/constructor-element.component.html
+++ b/src/app/components/admin/constructor-element/constructor-element.component.html
@@ -1,5 +1,5 @@
 <ng-container [ngSwitch]="element.type">
-    <section *ngSwitchCase="'section'" [ngClass]="element.properties?.className ? element.properties.className : null" [attr.placeholder]="element.type">
+    <section *ngSwitchCase="'section'" [ngClass]="element.properties?.className" [attr.placeholder]="element.type">
         <div class="borders">
             <div class="border border1"></div>
             <div class="border border2"></div>
@@ -8,13 +8,12 @@
         </div>
         <div class="funcBtns">
             <img src="assets/imgs/constructor/move.png" alt="" class="move">
-            <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration" *ngIf="element.configurator">
-            <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
+            <img src="assets/imgs/constructor/configuration.png" alt="" class="configurator">
             <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
         </div>
     </section>
 
-    <div *ngSwitchCase="'area'" [ngClass]="element.properties?.className ? element.properties.className : null" [attr.placeholder]="element.type">
+    <div *ngSwitchCase="'area'" [ngClass]="element.properties?.className" [attr.placeholder]="element.type">
         <div class="borders">
             <div class="border border1"></div>
             <div class="border border2"></div>
@@ -23,12 +22,11 @@
         </div>
         <div class="funcBtns">
             <img src="assets/imgs/constructor/move.png" alt="" class="move">
-            <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration" *ngIf="element.configurator">
-            <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
+            <img src="assets/imgs/constructor/configuration.png" alt="" class="configurator">
             <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
         </div>
     </div>
-    <div *ngSwitchCase="'img'" [ngClass]="element.properties?.className ? element.properties.className : null" [attr.placeholder]="element.type">
+    <div *ngSwitchCase="'img'" [ngClass]="element.properties?.className" [attr.placeholder]="element.type">
         <div class="borders">
             <div class="border border1"></div>
             <div class="border border2"></div>
@@ -37,13 +35,12 @@
         </div>
         <div class="funcBtns">
             <img src="assets/imgs/constructor/move.png" alt="" class="move">
-            <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration" *ngIf="element.configurator">
-            <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
+            <img src="assets/imgs/constructor/configuration.png" alt="" class="configurator">
             <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
         </div>
         <img>
     </div>
-    <div *ngSwitchCase="'list'" [ngClass]="element.properties?.className ? element.properties.className : null" [attr.placeholder]="element.type">
+    <div *ngSwitchCase="'list'" [ngClass]="element.properties?.className" [attr.placeholder]="element.type">
         <div class="borders">
             <div class="border border1"></div>
             <div class="border border2"></div>
@@ -52,13 +49,13 @@
         </div>
         <div class="funcBtns">
             <img src="assets/imgs/constructor/move.png" alt="" class="move">
-            <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration" *ngIf="element.configurator">
-            <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
+            <img src="assets/imgs/constructor/configuration.png" alt="" class="configurator">
             <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
         </div>
-        <ul></ul>
+        <ul>
+        </ul>
     </div>
-    <div *ngSwitchCase="'title'" [ngClass]="element.properties?.className ? element.properties.className : null" [attr.placeholder]="element.type">
+    <div *ngSwitchCase="'title'" [ngClass]="element.properties?.className" [attr.placeholder]="element.type">
         <div class="borders">
             <div class="border border1"></div>
             <div class="border border2"></div>
@@ -67,13 +64,12 @@
         </div>
         <div class="funcBtns">
             <img src="assets/imgs/constructor/move.png" alt="" class="move">
-            <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration" *ngIf="element.configurator">
-            <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
+            <img src="assets/imgs/constructor/configuration.png" alt="" class="configurator">
             <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
         </div>
         <h1 contenteditable="true"></h1>
     </div>
-    <div *ngSwitchCase="'paragraph'" [ngClass]="element.properties?.className ? element.properties.className : null" [attr.placeholder]="element.type">
+    <div *ngSwitchCase="'paragraph'" [ngClass]="element.properties?.className" [attr.placeholder]="element.type">
         <div class="borders">
             <div class="border border1"></div>
             <div class="border border2"></div>
@@ -82,13 +78,12 @@
         </div>
         <div class="funcBtns">
             <img src="assets/imgs/constructor/move.png" alt="" class="move">
-            <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration" *ngIf="element.configurator">
-            <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
+            <img src="assets/imgs/constructor/configuration.png" alt="" class="configurator">
             <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
         </div>
         <p contenteditable="true"></p>
     </div>
-    <div *ngSwitchCase="'btn'" [ngClass]="element.properties?.className ? element.properties.className : null" [attr.placeholder]="element.type">
+    <div *ngSwitchCase="'btn'" [ngClass]="element.properties?.className" [attr.placeholder]="element.type">
         <div class="borders">
             <div class="border border1"></div>
             <div class="border border2"></div>
@@ -97,23 +92,21 @@
         </div>
         <div class="funcBtns">
             <img src="assets/imgs/constructor/move.png" alt="" class="move">
-            <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration" *ngIf="element.configurator">
-            <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
+            <img src="assets/imgs/constructor/configuration.png" alt="" class="configurator">
             <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
         </div>
-        <a></a>
+        <a contenteditable="true"></a>
     </div>
-    <div *ngSwitchCase="'social-btn'"  [ngClass]="element.properties?.className ? element.properties.className : null" [attr.placeholder]="element.type">
+    <div *ngSwitchCase="'social-btn'"  [ngClass]="element.properties?.className" [attr.placeholder]="element.type">
         <div class="borders">
             <div class="border border1"></div>
             <div class="border border2"></div>
             <div class="border border3"></div>
             <div class="border border4"></div>
         </div>
-        <div class="funcBtnss">
+        <div class="funcBtns">
             <img src="assets/imgs/constructor/move.png" alt="" class="move">
-            <img src="assets/imgs/constructor/configuration.png" alt="" class="configuration" *ngIf="element.configurator">
-            <img src="assets/imgs/constructor/edit.png" alt="" class="edit">
+            <img src="assets/imgs/constructor/configuration.png" alt="" class="configurator">
             <img src="assets/imgs/constructor/delete.png" alt="" class="delete">
         </div>
         <a target="_blank"></a>
