--- a/src/app/components/admin/dashboard/dashboard.component.scss
+++ b/src/app/components/admin/dashboard/dashboard.component.scss
@@ -2,7 +2,7 @@ $size-index: calc(1vw + 1vh);
 $color:rgba(114, 48, 180, 0.68);
 :host{
     flex-grow: 1;
-    max-width: 84%;
+    max-width: 86%;
     box-sizing: border-box;
     padding: 35px;
     padding-top: 0px;
@@ -32,7 +32,7 @@ h2{
     margin: 0px;
     width: 100%;
     text-transform: uppercase;
-    font-family: "Koulen", sans-serif;
+    font-family: "Asap", sans-serif;
     font-weight: 500;
     letter-spacing: 3px;
     font-size: calc($size-index * 2.2);
@@ -66,7 +66,8 @@ h2{
         }
         a{
             display: block;
-            font-size: calc($size-index * 0.7);
+            font-size: calc($size-index * 0.8);
+            text-align: center;
             margin: 0px;
             text-decoration: none;
             border: 4px solid $color;
@@ -99,6 +100,7 @@ h2{
             cursor: pointer;
             p{
                 margin: 0px;
+                font-size: calc($size-index * 0.75);
             }
         }
     }
@@ -137,10 +139,11 @@ h2{
             box-sizing: border-box;
             background-color: rgb(41, 41, 41);
             color: white;
+            font-size: calc($size-index * 1);
         }
         button{
             text-transform: uppercase;
-            font-size: calc($size-index * 1);
+            font-size: calc($size-index * 1.3);
             padding: 5px 0px;
             width: 17%;
             transition-duration: 0.2s;
