--- a/src/app/components/admin/gallery-item/gallery-item.component.scss
+++ b/src/app/components/admin/gallery-item/gallery-item.component.scss
@@ -1,6 +1,6 @@
 .galleryItem{
-    width: calc(20vw - 20px);
-    height: calc(20vw - 20px);
+    width: 100%;
+    height: 13vw;
     background-position: center;
     background-size: cover;
     cursor: pointer;
