--- a/src/app/components/admin/head/head.component.scss
+++ b/src/app/components/admin/head/head.component.scss
@@ -2,7 +2,7 @@ $size-index: calc(1vw + 1vh);
 $color: rgba(114, 48, 180, 0.68);
 :host {
     flex-grow: 1;
-    max-width: 84%;
+    max-width: 86%;
     box-sizing: border-box;
     padding: 35px;
     padding-top: 0px;
@@ -14,7 +14,7 @@ h2 {
     margin: 0px;
     width: 100%;
     text-transform: uppercase;
-    font-family: "Koulen", sans-serif;
+    font-family: "Asap", sans-serif;
     font-weight: 500;
     letter-spacing: 3px;
     font-size: calc($size-index * 2.2);
@@ -92,7 +92,7 @@ button, .button {
         }
     }
     #files {
-        width: 68%;
+        width: 100%;
         height: 100%;
         flex-direction: column;
         justify-content: start;
