--- a/src/app/components/admin/pages/pages.component.scss
+++ b/src/app/components/admin/pages/pages.component.scss
@@ -2,7 +2,7 @@ $color: rgba(114, 48, 180, 0.68);
 $size-index: calc(1vw + 1vh);
 :host{
     flex-grow: 1;
-    max-width: 84%;
+    max-width: 86%;
     box-sizing: border-box;
     padding: 35px;
     padding-top: 0px;
@@ -52,13 +52,14 @@ $size-index: calc(1vw + 1vh);
             }
             #createrPages{
                 position: absolute;
-                bottom: -60px;
                 width: 120%;
                 display: flex;
-                align-items: center;
+                align-items: start;
                 overflow: hidden;
                 transition-duration: 0.5s;
-                height: 0px;
+                transform-origin: top ;
+                transform: translate(0%, 110%);
+                z-index: 2;
                 input{
                     height: 100%;
                     width: 80%;
@@ -101,7 +102,7 @@ $size-index: calc(1vw + 1vh);
     h2{
         margin: 0px;
         text-transform: uppercase;
-        font-family: "Koulen", sans-serif;
+        font-family: "Asap", sans-serif;
         font-weight: 500;
         letter-spacing: 3px;
         font-size: calc($size-index * 2.2);
@@ -147,7 +148,7 @@ section{
         width: 100%;
         height: 90%;
         display: flex;
-        justify-content: space-between;
+        justify-content: start;
         flex-wrap: wrap;
         article{
             width: 23%;
@@ -170,6 +171,8 @@ section{
                 flex-direction: column;
                 justify-content: space-between;
                 align-items: center;
+                color: $color;
+                        text-decoration: none !important;
                 cursor: pointer;
                 img{
                     width: 100%;
@@ -190,6 +193,8 @@ section{
                         text-transform: capitalize;
                         font-size: calc($size-index * 1);
                         transition-duration: 0.3s;
+                        color: $color;
+                        text-decoration: none !important;
     
                     }
                 }
