--- a/src/app/components/admin/uploaded-gallery/uploaded-gallery.component.scss
+++ b/src/app/components/admin/uploaded-gallery/uploaded-gallery.component.scss
@@ -2,22 +2,47 @@ $color: rgba(114, 48, 180, 0.68);
 $size-index: calc(1vw + 1vh);
 .uploadedGallery{
     position: absolute;
-    transition-duration: 0.2s;
     top: 0px;
-    right: -20vw;
-    background-color: rgb(31, 31, 31);
-    height: 100%;
-    width: 20vw;
-    box-sizing: border-box;
-    border: 3px solid $color;
-    padding: 0px 10px;
-    padding-bottom: 20px;
-    overflow-y: scroll;
-    &::-webkit-scrollbar{
-        display: none;
+    right: 0px;
+    height: calc(100vh - $size-index * 4.5);
+    .images{
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        height: 100%;
+        width: 16vw;
+        transition-duration: 0.5s;
+        box-sizing: border-box;
+        background-color: rgb(27, 27, 27);
+        border: 6px solid $color;
+        border-radius: 20px;
+        padding: 10px;
+        overflow-y: scroll;
+        z-index: 4;
+        &::-webkit-scrollbar{
+            display: none;
+        }
     }
     button{
         display: none;
     }
-    
+    .empty{
+        width: 100%;
+        height: 13vw;
+        background-position: center;
+        background-size: cover;
+        cursor: pointer;
+        transition-duration: 0.2s;
+        &::before{
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            color: $color;
+            font-weight: 700;
+            text-transform: uppercase;
+            text-align: center;
+            content: attr(placeholder);
+        }
+    }
 }
